--- a/sheet/index.html
+++ b/sheet/index.html
@@ -9,6 +9,8 @@
         .container { max-width: 800px; margin: auto; padding: 20px; }
         h2 { border-bottom: 2px solid black; padding-bottom: 5px; }
         .section { margin-bottom: 20px; }
+        span { cursor: pointer; }
+        input.editable { display: none; width: 100px; }
     </style>
 </head>
 <body>
@@ -19,29 +21,31 @@
 
         <div class="section">
             <h2>Core Information</h2>
-            <p><strong>Name:</strong> <span id="name"></span></p>
-            <p><strong>Class:</strong> <span id="class"></span></p>
-            <p><strong>Race:</strong> <span id="race"></span></p>
-            <p><strong>Level:</strong> <span id="level"></span></p>
+            <p><strong>Name:</strong> <span class="editable" id="name"></span><input type="text" class="editable-input"></p>
+            <p><strong>Class:</strong> <span class="editable" id="class"></span><input type="text" class="editable-input"></p>
+            <p><strong>Race:</strong> <span class="editable" id="race"></span><input type="text" class="editable-input"></p>
+            <p><strong>Level:</strong> <span class="editable" id="level"></span><input type="number" class="editable-input"></p>
         </div>
 
         <div class="section">
             <h2>Combat Stats</h2>
-            <p><strong>Max HP:</strong> <span id="maxHP"></span></p>
-            <p><strong>Current HP:</strong> <span id="currentHP"></span></p>
-            <p><strong>Armor Class:</strong> <span id="armorClass"></span></p>
-            <p><strong>Speed:</strong> <span id="speed"></span></p>
+            <p><strong>Max HP:</strong> <span class="editable" id="maxHP"></span><input type="number" class="editable-input"></p>
+            <p><strong>Current HP:</strong> <span class="editable" id="currentHP"></span><input type="number" class="editable-input"></p>
+            <p><strong>Armor Class:</strong> <span class="editable" id="armorClass"></span><input type="number" class="editable-input"></p>
+            <p><strong>Speed:</strong> <span class="editable" id="speed"></span><input type="number" class="editable-input"></p>
         </div>
     </div>
 
     <script>
+        let characterData = {};
+
         document.getElementById("fileInput").addEventListener("change", function(event) {
             const file = event.target.files[0];
             if (!file) return;
 
             const reader = new FileReader();
             reader.onload = function(e) {
-                const characterData = JSON.parse(e.target.result);
+                characterData = JSON.parse(e.target.result);
                 
                 document.getElementById("title").innerText = characterData.title;
                 document.getElementById("name").innerText = characterData.main.core.name;
@@ -54,6 +58,31 @@
                 document.getElementById("speed").innerText = characterData.main.combat.speed;
             };
             reader.readAsText(file);
+        });
+
+        document.querySelectorAll(".editable").forEach(span => {
+            span.addEventListener("dblclick", function() {
+                const input = this.nextElementSibling;
+                input.value = this.innerText;
+                this.style.display = "none";
+                input.style.display = "inline";
+                input.focus();
+            });
+        });
+
+        document.querySelectorAll(".editable-input").forEach(input => {
+            input.addEventListener("blur", function() {
+                const span = this.previousElementSibling;
+                span.innerText = this.value;
+                span.style.display = "inline";
+                this.style.display = "none";
+            });
+
+            input.addEventListener("keypress", function(event) {
+                if (event.key === "Enter") {
+                    this.blur();
+                }
+            });
         });
     </script>
 </body>
