--- a/sheet/index.html
+++ b/sheet/index.html
@@ -51,6 +51,7 @@
           <tr><th>Height</th><td>${coreDetails.height}</td></tr>
           <tr><th>Level</th><td>${coreDetails.level}</td></tr>
           <tr><th>Experience</th><td>${coreDetails.experience}</td></tr>
+          <tr><th>Proficiency Bonus</th><td>${Math.ceil(coreDetails.level / 4) + 1}</td></tr>
         </table>
       `;
 
@@ -66,18 +67,41 @@
           <tr><th>Hit Dice</th><td>${combatDetails.hitDice}</td></tr>
         </table>
       `;
+      
+      // Function to calculate savingScore dynamically based on the stat
+      function calculateSavingScore(stat) {
+        return (Math.ceil(coreDetails.level / 4) + 1) * stats.stat.savingProf + stats.stat.savingMisc;
+      }
 
+      // Calculating savingScore for each stat dynamically
+      stats.strength.savingScore = calculateSavingScore(strength);
+      stats.dexterity.savingScore = calculateSavingScore(dexterity);
+      stats.constitution.savingScore = calculateSavingScore(constitution);
+      stats.inteligence.savingScore = calculateSavingScore(inteligence);
+      stats.wisdom.savingScore = calculateSavingScore(wisdom);
+      stats.charisma.savingScore = calculateSavingScore(charisma);
+      
       // Stats details table
       const stats = data.main.stats;
       const statsTable = `
         <h2>Stats</h2>
         <table border="1">
-          <tr><th>Strength</th><td>${stats.strength.score}</td></tr>
-          <tr><th>Dexterity</th><td>${stats.dexterity.score}</td></tr>
-          <tr><th>Constitution</th><td>${stats.constitution.score}</td></tr>
-          <tr><th>Intelligence</th><td>${stats.inteligence.score}</td></tr>
-          <tr><th>Wisdom</th><td>${stats.wisdom.score}</td></tr>
-          <tr><th>Charisma</th><td>${stats.charisma.score}</td></tr>
+          <tr> <th>Ability Scores</th> </tr>
+          <tr> <th>Ability</th> <th>Score</th>
+          <tr> <td>Strength</td> <td>${stats.strength.score}</td> </tr>
+          <tr> <td>Dexterity</td> <td>${stats.dexterity.score}</td> </tr>
+          <tr> <td>Constitution</td> <td>${stats.constitution.score}</td> </tr>
+          <tr> <td>Intellegence</td> <td>${stats.intellegence.score}</td> </tr>
+          <tr> <td>Wisdom</td> <td>${stats.wisdom.score}</td> </tr>
+          <tr> <td>Charisma</td> <td>${stats.strength.score}</td> </tr>
+          <tr> <th>Saving Throws</th> </tr>
+          <tr> <th>Ability</th> <th>Score</th> <th>Proficiecy</th> <th>Misc</th>
+          <tr> <td>Strength</td> <td>${stats.strength.savingScore}</td> <td>${stats.strength.savingProf}</td> <td>${stats.strength.savingMisc}</td> </tr>
+          <tr> <td>Dexterity</td> <td>${stats.dexterity.savingScore}</td> <td>${stats.dexterity.savingProf}</td> <td>${stats.dexterity.savingMisc}</td> </tr>
+          <tr> <td>Constitution</td> <td>${stats.constitution.savingScore}</td> <td>${stats.constitution.savingProf}</td> <td>${stats.constitution.savingMisc}</td> </tr>
+          <tr> <td>Intellegence</td> <td>${stats.intellegence.savingScore}</td> <td>${stats.intellegence.savingProf}</td> <td>${stats.intellegence.savingMisc}</td> </tr>
+          <tr> <td>Wisdom</td> <td>${stats.wisdom.savingScore}</td> <td>${stats.wisdom.savingProf}</td> <td>${stats.wisdom.savingMisc}</td> </tr>
+          <tr> <td>Charisma</td> <td>${stats.charisma.savingScore}</td> <td>${stats.charisma.savingProf}</td> <td>${stats.charisma.savingMisc}</td> </tr>
         </table>
       `;
 
