--- a/sheet/index.html
+++ b/sheet/index.html
@@ -1,116 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>D&D Character Sheet</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>D&D Character Sheet Loader</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+        th, td { border: 1px solid black; padding: 8px; text-align: left; }
+        th { background-color: #f2f2f2; }
+        .section { margin-top: 20px; }
+    </style>
 </head>
 <body>
+    <h2>Upload D&D Character Sheet (JSON)</h2>
+    <input type="file" id="fileInput" accept="application/json">
+    <div id="sheetContainer"></div>
 
-  <h1>Upload D&D Character Sheet</h1>
+    <script>
+        document.getElementById('fileInput').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            if (!file) return;
+            
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                try {
+                    const data = JSON.parse(e.target.result);
+                    displayCharacterSheet(data);
+                } catch (error) {
+                    alert('Invalid JSON file');
+                }
+            };
+            reader.readAsText(file);
+        });
 
-  <!-- File input to upload JSON file -->
-  <input type="file" id="file-input" accept=".json" />
+        function formatKey(key) {
+            return key.replace(/([A-Z])/g, ' $1')
+                      .replace(/^./, str => str.toUpperCase())
+                      .replace("Hp", "HP");
+        }
 
-  <!-- Section to display the character data -->
-  <div id="character-info"></div>
+        function createCheckboxes(count) {
+            let checkboxes = '';
+            for (let i = 0; i < count; i++) {
+                checkboxes += '<input type="checkbox"> ';
+            }
+            return checkboxes;
+        }
 
-  <script>
-    document.getElementById('file-input').addEventListener('change', function(event) {
-      const file = event.target.files[0];
+        function displayCharacterSheet(data) {
+            const container = document.getElementById('sheetContainer');
+            container.innerHTML = '';
 
-      if (file) {
-        const reader = new FileReader();
-        
-        // When the file is loaded, read it as text (JSON string)
-        reader.onload = function(e) {
-          const jsonData = JSON.parse(e.target.result); // Parse the JSON file
-          displayCharacterData(jsonData); // Display the data
-        };
+            function createSection(title, content) {
+                const section = document.createElement('div');
+                section.classList.add('section');
+                section.innerHTML = `<h3>${title}</h3>${content}`;
+                return section;
+            }
 
-        reader.readAsText(file); // Read the file as text
-      }
-    });
+            let coreInfo = '<table>';
+            for (const key in data.main.core) {
+                coreInfo += `<tr><th>${formatKey(key)}</th><td>${data.main.core[key]}</td></tr>`;
+            }
+            coreInfo += '</table>';
+            container.appendChild(createSection('Core Information', coreInfo));
 
-    // Function to display character data from the JSON file using tables
-    function displayCharacterData(data) {
-      const characterInfo = document.getElementById('character-info');
-      const coreDetails = data.main.core;
+            let combatInfo = '<table>';
+            for (const key in data.main.combat) {
+                if (key === 'deathSaves') {
+                    const ds = data.main.combat[key];
+                    combatInfo += `<tr><th>Death Saves</th><td>Success: ${createCheckboxes(ds.success)} Failure: ${createCheckboxes(ds.failure)}</td></tr>`;
+                } else {
+                    combatInfo += `<tr><th>${formatKey(key)}</th><td>${data.main.combat[key]}</td></tr>`;
+                }
+            }
+            combatInfo += '</table>';
+            container.appendChild(createSection('Combat Stats', combatInfo));
 
-      // Function to calculate savingScore dynamically based on the stat
-      function calculateSavingScore(stat) {
-        return (Math.ceil(coreDetails.level / 4) + 1) * stat.savingProf + stat.savingMisc;
-      }
+            let statsInfo = '<table>';
+            for (const key in data.main.stats) {
+                statsInfo += `<tr><th>${formatKey(key)}</th><td>Score: ${data.main.stats[key].score}, Saving Prof: ${data.main.stats[key].savingProf}, Saving Misc: ${data.main.stats[key].savingMisc}</td></tr>`;
+            }
+            statsInfo += '</table>';
+            container.appendChild(createSection('Ability Scores', statsInfo));
 
-      // Stats details table
-      const stats = data.main.stats;
+            let skillsInfo = '<table>';
+            for (const key in data.main.skillsprof) {
+                skillsInfo += `<tr><th>${formatKey(key)}</th><td>${data.main.skillsprof[key] ? 'Proficient' : 'Not Proficient'}</td></tr>`;
+            }
+            skillsInfo += '</table>';
+            container.appendChild(createSection('Skills Proficiency', skillsInfo));
 
-      // Calculating savingScore for each stat dynamically
-      stats.strength.savingScore = calculateSavingScore(stats.strength);
-      stats.dexterity.savingScore = calculateSavingScore(stats.dexterity);
-      stats.constitution.savingScore = calculateSavingScore(stats.constitution);
-      stats.inteligence.savingScore = calculateSavingScore(stats.inteligence);
-      stats.wisdom.savingScore = calculateSavingScore(stats.wisdom);
-      stats.charisma.savingScore = calculateSavingScore(stats.charisma);
-
-      // Core details table
-      const coreTable = `
-        <h2>Core Information</h2>
-        <table border="1">
-          <tr><th>Name</th><td>${coreDetails.name}</td></tr>
-          <tr><th>Class</th><td>${coreDetails.class}</td></tr>
-          <tr><th>Race</th><td>${coreDetails.race}</td></tr>
-          <tr><th>Alignment</th><td>${coreDetails.alignment}</td></tr>
-          <tr><th>Background</th><td>${coreDetails.background}</td></tr>
-          <tr><th>Age</th><td>${coreDetails.age}</td></tr>
-          <tr><th>Weight</th><td>${coreDetails.weight}</td></tr>
-          <tr><th>Height</th><td>${coreDetails.height}</td></tr>
-          <tr><th>Level</th><td>${coreDetails.level}</td></tr>
-          <tr><th>Experience</th><td>${coreDetails.experience}</td></tr>
-          <tr><th>Proficiency Bonus</th><td>${Math.ceil(coreDetails.level / 4) + 1}</td></tr>
-        </table>
-      `;
-
-      // Combat details table
-      const combatDetails = data.main.combat;
-      const combatTable = `
-        <h2>Combat Information</h2>
-        <table border="1">
-          <tr><th>Max HP</th><td>${combatDetails.maxHitPoints}</td></tr>
-          <tr><th>Current HP</th><td>${combatDetails.currentHitPoints}</td></tr>
-          <tr><th>Armor Class</th><td>${combatDetails.armorClass}</td></tr>
-          <tr><th>Speed</th><td>${combatDetails.speed}</td></tr>
-          <tr><th>Hit Dice</th><td>${combatDetails.hitDice}</td></tr>
-        </table>
-      `;
-
-      // Stats details table
-      const statsTable = `
-        <h2>Stats</h2>
-        <table border="1">
-          <tr><th>Ability Scores</th></tr>
-          <tr><th>Ability</th><th>Score</th></tr>
-          <tr><td>Strength</td><td>${stats.strength.score}</td></tr>
-          <tr><td>Dexterity</td><td>${stats.dexterity.score}</td></tr>
-          <tr><td>Constitution</td><td>${stats.constitution.score}</td></tr>
-          <tr><td>Intelligence</td><td>${stats.inteligence.score}</td></tr>
-          <tr><td>Wisdom</td><td>${stats.wisdom.score}</td></tr>
-          <tr><td>Charisma</td><td>${stats.charisma.score}</td></tr
-          <tr><th>Saving Throws</th></tr>
-          <tr><th>Ability</th><th>Saving Score</th><th>Proficiency</th><th>Misc</th></tr>
-          <tr><td>Strength</td><td>${stats.strength.savingScore}</td><td>${stats.strength.savingProf}</td><td>${stats.strength.savingMisc}</td></tr>
-          <tr><td>Dexterity</td><td>${stats.dexterity.savingScore}</td><td>${stats.dexterity.savingProf}</td><td>${stats.dexterity.savingMisc}</td></tr>
-          <tr><td>Constitution</td><td>${stats.constitution.savingScore}</td><td>${stats.constitution.savingProf}</td><td>${stats.constitution.savingMisc}</td></tr>
-          <tr><td>Intelligence</td><td>${stats.inteligence.savingScore}</td><td>${stats.inteligence.savingProf}</td><td>${stats.inteligence.savingMisc}</td></tr>
-          <tr><td>Wisdom</td><td>${stats.wisdom.savingScore}</td><td>${stats.wisdom.savingProf}</td><td>${stats.wisdom.savingMisc}</td></tr>
-          <tr><td>Charisma</td><td>${stats.charisma.savingScore}</td><td>${stats.charisma.savingProf}</td><td>${stats.charisma.savingMisc}</td></tr>
-        </table>
-      `;
-
-      // Combine all tables and inject them into the page
-      characterInfo.innerHTML = coreTable + combatTable + statsTable;
-    }
-  </script>
-
+            let weaponsInfo = '<table>';
+            for (const weapon in data.main.weapons) {
+                const w = data.main.weapons[weapon];
+                weaponsInfo += `<tr><th>${weapon}</th><td>Hit: ${w.hit}, Damage: ${w.damage.diceAmount}${w.damage.dice} + ${w.damage.bonusDamage}, Type: ${w.type}</td></tr>`;
+            }
+            weaponsInfo += '</table>';
+            container.appendChild(createSection('Weapons', weaponsInfo));
+        }
+    </script>
 </body>
 </html>
